--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- JQuery Javascript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     <!-- Personal CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -39,25 +42,25 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h4 class="answer-button" id="answer-1"></h4>
+            <h4 class="option-button" id="option-1"></h4>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-12">
-            <h4 class="answer-button" id="answer-2"></h4>
+            <h4 class="option-button" id="option-2"></h4>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-12">
-            <h4 class="answer-button" id="answer-3"></h4>
+            <h4 class="option-button" id="option-3"></h4>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-12">
-            <h4 class="answer-button" id="answer-4"></h4>
+            <h4 class="option-button" id="option-4"></h4>
         </div>
     </div>
 
