created stop timer function for when user clicks finish button

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 
     </div>
 
+    <div class="btn-primary" style="display: none" id="finish">
+        <h3>Click here when finished</h3>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
