changed backgrounds so questions, results and title are all visible against the background

--- a/index.html
+++ b/index.html
@@ -22,17 +22,21 @@
 </head>
 
 <body>
-    <div class="row" class="title">
-        <div class="col-md-12">
-            <h1>Dart Frog Trivia!</h1>
+
+    <div id="header">
+        <div class="row title">
+            <div class="col-md-12">
+                <h1>Dart Frog Trivia!</h1>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <h3>Time Remaining: <span id="time-remaining"></span></h3>
+            </div>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <h3>Time Remaining: <span id="time-remaining"></span></h3>
-        </div>
-    </div>
 
     <div class="row">
         <div class="col-md-12">
@@ -46,6 +50,10 @@
 
     <div class="container" id="game-board">
 
+    </div>
+
+    <div class="container" id="results">
+        
     </div>
 
     <div class="btn-primary" style="display: none" id="finish">
